{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 583,
  "lineage": "47c57f35-b573-f2f0-9205-d9473d6eb5fa",
  "resources": [
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ogurim_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0692c9c5fadee9b5c",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:elastic-ip/eipalloc-0692c9c5fadee9b5c",
            "domain": "vpc",
            "id": "eipalloc-0692c9c5fadee9b5c",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-229-8.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.229.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_wasa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034a31ed1d34ef024",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:instance/i-0b9d581b1514e3fbb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9d581b1514e3fbb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051c2b24cb8423467",
            "private_dns": "ip-10-0-2-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0252c96b7c79623e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3c7b4aa1666892a",
            "tags": {
              "Name": "seoul-wasa"
            },
            "tags_all": {
              "Name": "seoul-wasa"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307d0060dabf575a"
            ]
          },
          "dependencies": [
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc",
            "module.seoul.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_wasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034a31ed1d34ef024",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:instance/i-031e20bf42db72271",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031e20bf42db72271",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b23485f95528a0ad",
            "private_dns": "ip-10-0-3-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033b08c2b5c157b91",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7023576bb63dc83",
            "tags": {
              "Name": "seoul-wasc"
            },
            "tags_all": {
              "Name": "seoul-wasc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307d0060dabf575a"
            ]
          },
          "dependencies": [
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc",
            "module.seoul.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034a31ed1d34ef024",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:instance/i-0e37f01df14fe8944",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e37f01df14fe8944",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040929f4ad5077e55",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-35-48-55.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.48.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0497b6b601f8a4322",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d0c1773356bddbe",
            "tags": {
              "Name": "seoul-weba"
            },
            "tags_all": {
              "Name": "seoul-weba"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307d0060dabf575a",
              "sg-0cde15a5efc05d9ef"
            ]
          },
          "dependencies": [
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_security_group.ogurim_web_sg",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc",
            "module.seoul.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_webc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034a31ed1d34ef024",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:instance/i-0efcd975a4c97bcac",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efcd975a4c97bcac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f21470013362c60a",
            "private_dns": "ip-10-0-1-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-43-201-71-6.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.71.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a0dc9e394b6df19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06655fae0a473c906",
            "tags": {
              "Name": "seoul-webc"
            },
            "tags_all": {
              "Name": "seoul-webc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0307d0060dabf575a",
              "sg-0cde15a5efc05d9ef"
            ]
          },
          "dependencies": [
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_security_group.ogurim_web_sg",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc",
            "module.seoul.data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ogurim_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:internet-gateway/igw-09093f3d533f99c7b",
            "id": "igw-09093f3d533f99c7b",
            "owner_id": "339713119714",
            "tags": {
              "Name": "seoul-ig"
            },
            "tags_all": {
              "Name": "seoul-ig"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ogurim_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/seoul-lb/33db51b5d3c026c0",
            "arn_suffix": "app/seoul-lb/33db51b5d3c026c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "seoul-lb-70433515.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/seoul-lb/33db51b5d3c026c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "seoul-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0307d0060dabf575a",
              "sg-0cde15a5efc05d9ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d0c1773356bddbe"
              },
              {
                "subnet_id": "subnet-06655fae0a473c906"
              }
            ],
            "subnets": [
              "subnet-03d0c1773356bddbe",
              "subnet-06655fae0a473c906"
            ],
            "tags": {
              "Name": "seoul-lb"
            },
            "tags_all": {
              "Name": "seoul-lb"
            },
            "vpc_id": "vpc-01f1d053222882b0a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_security_group.ogurim_web_sg",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ogurim_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:listener/app/seoul-lb/33db51b5d3c026c0/330e6a01eb6b9484",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:targetgroup/seoul-albtg/d069c8ae6c610c95",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:listener/app/seoul-lb/33db51b5d3c026c0/330e6a01eb6b9484",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:loadbalancer/app/seoul-lb/33db51b5d3c026c0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "seoul-albli"
            },
            "tags_all": {
              "Name": "seoul-albli"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul.aws_lb.ogurim_lb",
            "module.seoul.aws_lb_target_group.ogurim_albtg",
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_security_group.ogurim_web_sg",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ogurim_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:targetgroup/seoul-albtg/d069c8ae6c610c95",
            "arn_suffix": "targetgroup/seoul-albtg/d069c8ae6c610c95",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:339713119714:targetgroup/seoul-albtg/d069c8ae6c610c95",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "seoul-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "seoul-albtg"
            },
            "tags_all": {
              "Name": "seoul-albtg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ogurim_nig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0692c9c5fadee9b5c",
            "association_id": "eipassoc-0d7a56389df882bda",
            "connectivity_type": "public",
            "id": "nat-0d7b57f92e18c6f75",
            "network_interface_id": "eni-0f71777439399599f",
            "private_ip": "10.0.0.21",
            "public_ip": "43.200.229.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d0c1773356bddbe",
            "tags": {
              "Name": "seoul-nig"
            },
            "tags_all": {
              "Name": "seoul-nig"
            }
          },
          "dependencies": [
            "module.seoul.aws_eip.ogurim_eip",
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_nrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-0316651e9b289a724",
            "id": "rtb-0316651e9b289a724",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d7b57f92e18c6f75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-nrt"
            },
            "tags_all": {
              "Name": "seoul-nrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul.aws_eip.ogurim_eip",
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_nat_gateway.ogurim_nig",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-056a186448fbf2be9",
            "id": "rtb-056a186448fbf2be9",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09093f3d533f99c7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-rt"
            },
            "tags_all": {
              "Name": "seoul-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbd2ebf0eb35158c",
            "route_table_id": "rtb-0316651e9b289a724",
            "subnet_id": "subnet-0c2c9d8f346dff99c"
          },
          "dependencies": [
            "module.seoul.aws_eip.ogurim_eip",
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_nat_gateway.ogurim_nig",
            "module.seoul.aws_route_table.ogurim_nrt",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eacf574cc680019",
            "route_table_id": "rtb-0316651e9b289a724",
            "subnet_id": "subnet-0076148b0d0c9d9af"
          },
          "dependencies": [
            "module.seoul.aws_eip.ogurim_eip",
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_nat_gateway.ogurim_nig",
            "module.seoul.aws_route_table.ogurim_nrt",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_w",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb539be92337e963",
            "route_table_id": "rtb-0316651e9b289a724",
            "subnet_id": "subnet-0c3c7b4aa1666892a"
          },
          "dependencies": [
            "module.seoul.aws_eip.ogurim_eip",
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_nat_gateway.ogurim_nig",
            "module.seoul.aws_route_table.ogurim_nrt",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0119b311b39e2d412",
            "route_table_id": "rtb-0316651e9b289a724",
            "subnet_id": "subnet-0a7023576bb63dc83"
          },
          "dependencies": [
            "module.seoul.aws_eip.ogurim_eip",
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_nat_gateway.ogurim_nig",
            "module.seoul.aws_route_table.ogurim_nrt",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_rtas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0518dd8fc65691377",
            "route_table_id": "rtb-056a186448fbf2be9",
            "subnet_id": "subnet-03d0c1773356bddbe"
          },
          "dependencies": [
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_route_table.ogurim_rt",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077fdb2c41e3771a7",
            "route_table_id": "rtb-056a186448fbf2be9",
            "subnet_id": "subnet-06655fae0a473c906"
          },
          "dependencies": [
            "module.seoul.aws_internet_gateway.ogurim_ig",
            "module.seoul.aws_route_table.ogurim_rt",
            "module.seoul.aws_subnet.ogurim_subnet",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0cf1298369074e687",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf1298369074e687",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0307d0060dabf575a"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0307d0060dabf575a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "seoul-db-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-db-sg"
            },
            "tags_all": {
              "Name": "seoul-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0307d0060dabf575a",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0307d0060dabf575a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "seoul-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-sg"
            },
            "tags_all": {
              "Name": "seoul-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0cde15a5efc05d9ef",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cde15a5efc05d9ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker",
                "from_port": 60080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0307d0060dabf575a"
                ],
                "self": false,
                "to_port": 60080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0307d0060dabf575a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "seoul-web-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-web-sg"
            },
            "tags_all": {
              "Name": "seoul-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul.aws_security_group.ogurim_sg",
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-03d0c1773356bddbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d0c1773356bddbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-weba"
            },
            "tags_all": {
              "Name": "seoul-weba"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-06655fae0a473c906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06655fae0a473c906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-webc"
            },
            "tags_all": {
              "Name": "seoul-webc"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0c3c7b4aa1666892a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c7b4aa1666892a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-wasa"
            },
            "tags_all": {
              "Name": "seoul-wasa"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0a7023576bb63dc83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7023576bb63dc83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-wasc"
            },
            "tags_all": {
              "Name": "seoul-wasc"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0c2c9d8f346dff99c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c9d8f346dff99c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-dba"
            },
            "tags_all": {
              "Name": "seoul-dba"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0076148b0d0c9d9af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0076148b0d0c9d9af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-dbc"
            },
            "tags_all": {
              "Name": "seoul-dbc"
            },
            "vpc_id": "vpc-01f1d053222882b0a"
          },
          "dependencies": [
            "module.seoul.aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ogurim_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:vpc/vpc-01f1d053222882b0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d364adc1e6fefcf",
            "default_route_table_id": "rtb-04276433af262418b",
            "default_security_group_id": "sg-0cb5076c182e618d8",
            "dhcp_options_id": "dopt-0a67717d8f23193c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f1d053222882b0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04276433af262418b",
            "owner_id": "339713119714",
            "tags": {
              "Name": "seoul-vpc"
            },
            "tags_all": {
              "Name": "seoul-vpc"
            }
          }
        }
      ]
    }
  ]
}